sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/of_Ads_and_Promo_Products__c.field-meta.xml
<CustomField>
    <fullName>of_Ads_and_Promo_Products__c</fullName>
    <description>BASD-59117: Counts the number of Banners, CRM , Sponsorships and Branded Collection  Products added on Quote. Set via price rule. Used in IO Template</description>
    <label># of Ads Promo Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>