sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/of_Core_Products_On_Quote__c.field-meta.xml
<CustomField>
    <fullName>of_Core_Products_On_Quote__c</fullName>
    <description>LEM-14401: It is used to store the number of core products that are added to the cart.</description>
    <label># of Core Products On Quote</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>