sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Operations_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Operations_Commitment__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Be sure to populate the Operations metrics</inlineHelpText>
    <label>Operations Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>