sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Deal_Type__c</fullName>
    <description>LEM-10422: New Quote Status - Self-Serve Activated’</description>
    <formula>TEXT(SBQQ__Opportunity2__r.Deal_Type__c)</formula>
    <inlineHelpText>Returns the value of &quot;Deal Type&quot; for the Opportunity related to this Quote</inlineHelpText>
    <label>Opportunity Deal Type</label>
    <type>Text</type>
</CustomField>