sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>LEM-4549: It is 18 character Id of the related Opportunity.</description>
    <formula>CASESAFEID(SBQQ__Opportunity2__c)</formula>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>