sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>LEM-15348: It is used to capture the Opportunity Name and used in Quote Slack Notification.</description>
    <formula>SBQQ__Opportunity2__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>