sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <description>LEM-16264: It is used to capture the source of inbound ingestion payload sent by mulesoft.</description>
    <formula>TEXT(SBQQ__Opportunity2__r.Source__c)</formula>
    <label>Opportunity Source</label>
    <type>Text</type>
</CustomField>