sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Type__c</fullName>
    <description>LEM-9256</description>
    <formula>TEXT( SBQQ__Opportunity2__r.Opportunity_Sub_Type__c )</formula>
    <label>Opportunity Sub Type</label>
    <type>Text</type>
</CustomField>