sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Mark Delay after Activation days on Pre Sale, Start Date on Post Sale Quotes as mandatory</description>
    <formula>TEXT( SBQQ__Opportunity2__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the value of &quot;Type&quot; for the Opportunity related to this Quote</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>