sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Opt_In_Opt_Out_Decision__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Opt_Out_Decision__c</fullName>
    <description>LEM-1363 - Capture Opt In/Out and Responsible Party</description>
    <label>Franchise Enrollment Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opt_In_Opt_Out_Decision</valueSetName>
    </valueSet>
</CustomField>