sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Opt_In_Opt_Out_Response_Time_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Opt_Out_Response_Time_in_Days__c</fullName>
    <description>LEM-1363 - Capture Opt In/Out and Responsible Party</description>
    <label>Opt-In/Opt-Out Response Time (in Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>