sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Opt_In_Out_Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Out_Responsible_Party__c</fullName>
    <description>LEM-1363 - Capture Opt In/Out and Responsible Party</description>
    <label>Opt-In/Out Responsible Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opt_In_Out_Responsible_Party</valueSetName>
    </valueSet>
</CustomField>