sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Opt_Out_Save_Period_days__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Save_Period_days__c</fullName>
    <description>LEM-2049: Capture additional data for FSA/Opt-Out/Opt-In scenarios for Nintex</description>
    <label>Opt-Out Save Period (days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>