sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Out_For_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Out_For_Signature_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13475: It stores the date when the Quote status is changed to &apos;Out for Signature&apos;.</description>
    <label>Out For Signature Date</label>
    <type>Date</type>
</CustomField>