sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Override_Tier__c.field-meta.xml
<CustomField>
    <fullName>Override_Tier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13257-DPEI Tiers Calculation Logic</description>
    <label>Override Tier</label>
    <type>Checkbox</type>
</CustomField>