sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Paid_Social_Whitelisting__c.field-meta.xml
<CustomField>
    <fullName>Paid_Social_Whitelisting__c</fullName>
    <description>LEM-15296: DPEI Attributes</description>
    <label>Paid Social / Whitelisting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>