sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2361: Allow user to set payment terms on Quote</description>
    <label>Payment Account</label>
    <referenceTo>Payment_Account__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>