sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Account_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account_Payment_Terms__c</fullName>
    <formula>Invoicing_Payment_Account__r.Payment_Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Account Payment Terms</label>
    <type>Text</type>
</CustomField>