sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Account_Payment_Terms_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account_Payment_Terms_Number__c</fullName>
    <description>LEM-1520 Background Field for Approval Rule</description>
    <formula>CASE(Payment_Account_Payment_Terms__c ,
&apos;Due on receipt&apos;, 1,
&apos;Net 7&apos;, 7,
&apos;Net 15&apos;, 15,
&apos;Net 20&apos;, 20,
&apos;Net 30&apos;, 30,
&apos;Net 45&apos;, 45,
&apos;Net 60&apos;, 60,
&apos;Net 70&apos;, 70,
&apos;Net 90&apos;, 90,
&apos;Net 120&apos;, 120
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Account Payment Terms Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>