sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_to_HQ__c.field-meta.xml
<CustomField>
    <fullName>Payment_to_HQ__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Payment to HQ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>