sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/PickUp_Program_Commitment__c.field-meta.xml
<CustomField>
    <fullName>PickUp_Program_Commitment__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>100% default, Manager approval to override</inlineHelpText>
    <label>PickUp Program Commitment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>