sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Pricing_Variation_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Variation_Scenario__c</fullName>
    <description>LEM-19800: It is used to store the pricing variation scenario values.</description>
    <label>Pricing Variation Scenario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>