sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Product_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Product_Visibility__c</fullName>
    <description>LEM-936: Product Visibility. LEM-9455: Updated the formula to include ads and promo check</description>
    <formula>/**IF(
        TEXT(Contract_Generation_Path__c) = &apos;Templatized&apos;, &apos;Ads and Promos; Templatized&apos;,

        IF(OR(TEXT(SBQQ__Account__r.Type)= &apos;Agency&apos;,
        TEXT(SBQQ__Account__r.Type)= &apos;AdTech&apos;,
        TEXT(SBQQ__Account__r.Primary_Vertical__c )= &apos;CPG&apos;), &apos;Ads and Promos&apos;,

        NULL))**/

        IF(Segment__c != $Label.AccountSegmentSMB, (
        IF( TEXT(Is_this_for_Ads_Promos__c) = &apos;Yes&apos;, &apos;Ads and Promos; Only&apos;,
            IF( TEXT(Is_this_for_Ads_Promos__c) = &apos;No&apos;, IF( TEXT(Contract_Generation_Path__c) = &apos;Templatized&apos;, &apos;No Products&apos;,
                                                            IF(OR(TEXT(SBQQ__Account__r.Type)= &apos;Agency&apos;,
                                                                    TEXT(SBQQ__Account__r.Type)= &apos;AdTech&apos;,
                                                                    TEXT(SBQQ__Account__r.Primary_Vertical__c )= &apos;CPG&apos;), &apos;Ads and Promos; Other&apos;, &apos;Other&apos;)),
                IF( TEXT(Contract_Generation_Path__c) = &apos;Templatized&apos;, &apos;Ads and Promos; Only&apos;,
                    IF(OR(TEXT(SBQQ__Account__r.Type)= &apos;Agency&apos;,
                            TEXT(SBQQ__Account__r.Type)= &apos;AdTech&apos;,
                            TEXT(SBQQ__Account__r.Primary_Vertical__c )= &apos;CPG&apos;), &apos;Ads and Promos&apos;, NULL))))), &apos;&apos;)</formula>
    <label>Product Visibility</label>
    <type>Text</type>
</CustomField>