sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Push_Notifications_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Push_Notifications_Quantity__c</fullName>
    <description>LEM-15296: DPEI Attributes</description>
    <label>Push Notifications Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>