sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Quarterly_Rate_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Rate_Threshold__c</fullName>
    <description>LEM-16511: It is used in QCP for comparing Commission Rates Filter_Value_1__c for CRT Stamping.</description>
    <formula>Text(SBQQ__Opportunity2__r.Quarterly_Rate_Threshold__c)</formula>
    <label>Quarterly Rate Threshold</label>
    <type>Text</type>
</CustomField>