sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Quarterly_Signing_Bonus_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Signing_Bonus_Threshold__c</fullName>
    <description>LEM-16511: It is used to store Signing bonus threshold value which is used in approval rules.</description>
    <formula>SBQQ__Opportunity2__r.Quarterly_Signing_Bonus_Threshold__c</formula>
    <label>Quarterly Signing Bonus Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>