sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Line_Mismatch_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Mismatch_Type__c</fullName>
    <description>LEM-15491: It is used to store the type of Quote Line mismatch occurred on Amendment.</description>
    <label>Quote Line Mismatch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Product Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>