sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <description>LEM-2395: Make Quote type viewable from the QLE</description>
    <formula>TEXT(SBQQ__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Type</label>
    <type>Text</type>
</CustomField>