sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Reason_for_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Negotiation__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Reason for Negotiation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing contract up</fullName>
            </value>
            <value>
                <fullName>OAM Initiated</fullName>
            </value>
            <value>
                <fullName>Mx Churn Inbound (Exclusivity)</fullName>
            </value>
            <value>
                <fullName>Mx Churn Inbound (Other)</fullName>
            </value>
            <value>
                <fullName>UE Exclusivity Break</fullName>
            </value>
            <value>
                <fullName>SD Exclusivity Break</fullName>
            </value>
            <value>
                <fullName>Grubhub Exclusivity Break</fullName>
            </value>
            <value>
                <fullName>PM Exclusivity Break</fullName>
            </value>
            <value>
                <fullName>Mx Initiated Negotiations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>