sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Rebate_3__c.field-meta.xml
<CustomField>
    <fullName>Rebate_3__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Rebate 3 (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>