sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Requesting_Account_Management__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Account_Management__c</fullName>
    <description>LEM-13989: It shows the managed status of the account.</description>
    <formula>TEXT(SBQQ__Account__r.Managed_Status__c)</formula>
    <label>Requesting Account Management</label>
    <type>Text</type>
</CustomField>