sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/RESSMO_Eligible__c.field-meta.xml
<CustomField>
    <fullName>RESSMO_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16422 - This checkbox is used to store outcome of RESSMO eligibility when the Quote’s Status becomes &quot;Approved&quot;&apos;, in order to measure success of the RESSMO implementation and process</description>
    <inlineHelpText>Determines whether a Quote was eligible for RESSMO when the Quote was Approved</inlineHelpText>
    <label>RESSMO Eligible</label>
    <type>Checkbox</type>
</CustomField>