sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/RESSMO_Payload__c.field-meta.xml
<CustomField>
    <fullName>RESSMO_Payload__c</fullName>
    <description>LEM-17429 - store details from ressmo ui</description>
    <label>RESSMO Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>