sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/RESSMO_Store_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>RESSMO_Store_Account_Id__c</fullName>
    <description>LEM-15496 Epic Used as Part of RESSMO Button and Eligibility store validation</description>
    <label>RESSMO Store Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>