sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>LEM-1980 Segment field from Account</description>
    <formula>TEXT(SBQQ__Account__r.Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>