sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Self_Serve_Opportunity_Quote__c.field-meta.xml
<CustomField>
    <fullName>Self_Serve_Opportunity_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-12257: Field no longer needed</description>
    <label>Self-Serve Opportunity/Quote</label>
    <type>Checkbox</type>
</CustomField>