sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Self_Serve_Status__c.field-meta.xml
<CustomField>
    <fullName>Self_Serve_Status__c</fullName>
    <description>LEM-10422: New Quote Status - Self-Serve Activated</description>
    <label>Self-Serve Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>