sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Signed_Contract_link__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract_link__c</fullName>
    <description>LEM-913: Attach Jira Request Ticket and Signed Contract links on the quote</description>
    <label>Signed Contract link</label>
    <type>Url</type>
</CustomField>