sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Slack_Notification_To_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notification_To_Opportunity_Owner__c</fullName>
    <description>LEM-15348: It is used to identify whether a slack notification should be sent to the opportunity owner during SSOB processing if an existing primary quote is found.</description>
    <defaultValue>false</defaultValue>
    <label>Slack Notification To Opportunity Owner</label>
    <type>Checkbox</type>
</CustomField>