sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Social_Media_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Engagement__c</fullName>
    <description>LEM-15296: DPEI Attributes</description>
    <label>Social Media Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>