sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Social_Post_Commitment_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_Commitment_Quarterly__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Number of posts a merchant will share on social media quarterly</inlineHelpText>
    <label>Social Post Commitment (Quarterly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>