sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Special_Commission_Rates__c.field-meta.xml
<CustomField>
    <fullName>Special_Commission_Rates__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>If Yes, this would trigger the commission rates section</inlineHelpText>
    <label>Special Commission Rates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>