sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Sponsored_Listing_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Listing_Commitment__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Number of weeks per quarter Mx will Participate in Sponsored Listing</inlineHelpText>
    <label>Sponsored Listing Commitment (Annual)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>