sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/SSMO_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>SSMO_Expiration_Date__c</fullName>
    <description>LEM-16278 - Field to capture when the Quote will no longer be active in SSMO</description>
    <label>SSMO Expiration Date</label>
    <type>Date</type>
</CustomField>