sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/SSMO_Validation__c.field-meta.xml
<CustomField>
    <fullName>SSMO_Validation__c</fullName>
    <description>Contains any error message from SSMO or  “Success”</description>
    <label>SSMO Validation</label>
    <type>TextArea</type>
</CustomField>