sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Standard_Marketing_Package_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Standard_Marketing_Package_Benefit__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <inlineHelpText>Pre-defined marketing packages for Top Mx</inlineHelpText>
    <label>Standard Marketing Package Benefit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>