sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Store_Specific_Variations__c.field-meta.xml
<CustomField>
    <fullName>Store_Specific_Variations__c</fullName>
    <description>LEM-17422: Indicates if Mx needs Store specific Pricing/Product variations</description>
    <inlineHelpText>Indicates if Mx needs Store specific Pricing/Product variations</inlineHelpText>
    <label>Store Specific Variations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>