sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Storefront_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Exclusivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16543: Quote line header field.</description>
    <label>Storefront Exclusivity</label>
    <type>Checkbox</type>
</CustomField>