sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Storefront_Free_Delivery_Duration__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Free_Delivery_Duration__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Storefront Free Delivery Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>3 weeks</fullName>
            </value>
            <value>
                <fullName>4 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>