sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Storefront_Free_Trail_Duration__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Free_Trail_Duration__c</fullName>
    <description>LEM-14395: Custom/Unique Terms - Attributes.</description>
    <label>Storefront Free Trail Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 days</fullName>
            </value>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>45 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>