sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Storefront_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Quote_Lines__c</fullName>
    <description>LEM: 1538 - Set Experience on Quote</description>
    <label>Storefront Quote Lines</label>
    <length>10</length>
    <type>Text</type>
</CustomField>