sfdx-source/force-app/main/default/objects/SBQQ__Quote__c/fields/Storepage_Banner__c.field-meta.xml
<CustomField>
    <fullName>Storepage_Banner__c</fullName>
    <description>LEM-15296: DPEI Attributes</description>
    <label>Storepage Banner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>